# roca-cloud

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  cdk.json  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
infrastructure/: __init__.py  app.py  roca_cloud_stack.py
scripts/: roca-cloud-mcp-stdio.py  smoke-roca-cloud.sh
src/roca_cloud/: __init__.py  layers.py  resources.py  service.py  store.py
src/roca_cloud/data/: __init__.py  layers.json  schema.sql
src/roca_cloud/db/: __init__.py  postgres.py
src/roca_cloud/mcp/: __init__.py  contract.py
src/roca_cloud/runtime/: __init__.py  auth.py  lambda_handler.py
tests/: test_lambda_handler.py  test_mcp_contract.py  test_postgres_adapter.py  test_store_contract.py
